[package]
name = "hds_test0"
version = "0.0.1"
license = "MIT"
edition = "2021"
rust-version = "1.64.0"
authors = ["Hayden Stainsby <hds@caffeineconcepts.com>",]
readme = "README.md"
repository = "https://github.com/hds/hds_test0"
homepage = "https://github.com/hds/hds_test0"
description = """
A dummy crate for testing publish automation.
"""
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
